--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,26 @@
   --color-primary: #64ffda; /* Custom primary color */
   --color-secondary: #8892b0; /* Custom secondary color */
   --color-bg: #112240;
+  --breakpoint-xsm: 350px;
+  --breakpoint-xs: 476px;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-bs: 900px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1536px;
+
+
+  --breakpoint-2xl-mx:  1535px ;
+  --breakpoint-xl-mx:  1279px ;
+  --breakpoint-lg-mx:  1023px ;
+  --breakpoint-bs-mx:  899px ;
+  --breakpoint-md-mx: 767px ;
+  --breakpoint-sm-mx: 639px ;
+  --breakpoint-xs-mx:  475px ;
+  --breakpoint-xsm-mx:  349px 
 }
+
 
 /* Example utility classes */
 .bg-primary {
@@ -24,4 +43,40 @@
 }
 .bg-color {
   background-color: var(--color-bg);
+}
+
+.dm-mono-light {
+  font-family: "DM Mono", monospace;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.dm-mono-regular {
+  font-family: "DM Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.dm-mono-medium {
+  font-family: "DM Mono", monospace;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.dm-mono-light-italic {
+  font-family: "DM Mono", monospace;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.dm-mono-regular-italic {
+  font-family: "DM Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.dm-mono-medium-italic {
+  font-family: "DM Mono", monospace;
+  font-weight: 500;
+  font-style: italic;
 }
